test/src/e2e_vm_tests/test_programs/should_fail/lexer_errors/src/main.sw
library;

pub struct R {
    a: u32,
}

impl R {
    pub fn from_str(new: i32) {
p() {
  :Script => {
   c = ZERO_B256;
    ), }
}

const OFFSET = 0;